--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,137 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.select2-container {
+    /* The container where the selectbox is housing*/
+    @apply relative box-border align-middle inline-block m-0 mb-2;
+}
+
+.select2-container .select2-selection--single {
+    /* Selection box itself */
+    @apply box-border cursor-pointer block select-none shadow border rounded;
+}
+
+.select2-container .select2-selection--single .select2-selection__rendered {
+    /* DIV inside Selection box with text, clear button and arrow down*/
+    @apply block h-6 pl-1 pr-6 truncate;
+}
+
+.select2-container .select2-selection--single .select2-selection__clear {
+    /* The DIV where the X is housing to clear the chosen option */
+    @apply relative -m-1;
+}
+
+.select2-container[dir="rtl"]
+    .select2-selection--single
+    .select2-selection__rendered {
+    /*@apply;*/
+}
+
+.select2-container .select2-selection--multiple {
+    @apply box-border overflow-hidden h-4 cursor-pointer block select-none;
+}
+
+.select2-container .select2-selection--multiple .select2-selection__rendered {
+    @apply inline-block pl-2 truncate whitespace-nowrap;
+}
+
+.select2-container .select2-search--inline {
+    /* Search box*/
+    @apply float-left;
+}
+
+.select2-container .select2-search--inline .select2-search__field {
+    @apply box-border border dark:border-gray-600 pl-1 my-1 w-full text-base;
+}
+
+.select2-container
+    .select2-search--inline
+    .select2-search__field::-webkit-search-cancel-button {
+    @apply appearance-none;
+}
+
+.select2-dropdown {
+    /* Dropdown area after the arrow down is clicked */
+    @apply absolute block w-auto box-border bg-white dark:bg-slate-700 border-solid border border-gray-200 z-50 float-left;
+}
+
+.select2-results {
+    @apply block text-black dark:text-gray-300;
+}
+
+.select2-results__options {
+    @apply list-none m-0 p-0;
+}
+
+.select2-results__option {
+    /* The rows with results that you see after dropdown.
+Increase p-1 to p-2 to have more space between results */
+    @apply p-1 select-none;
+}
+
+.select2-results__option[aria-selected] {
+    @apply cursor-pointer;
+}
+
+.select2-container--open .select2-dropdown {
+    /* Dropdown container opened and results are shown*/
+    @apply mt-3 left-0;
+}
+
+.select2-container--open .select2-dropdown--above {
+    /* The left and right borders of the option rows */
+    @apply rounded border-gray-400 dark:border-gray-700 shadow;
+}
+
+.select2-container--open .select2-dropdown--below {
+    /* The left and right borders of the option rows */
+    @apply rounded border-gray-400 dark:border-gray-700 shadow;
+}
+
+.select2-search--dropdown {
+    /* Search dropdown element*/
+    @apply block p-2;
+}
+
+.select2-search--dropdown .select2-search__field {
+    /* Search box itself where you can enter text*/
+    @apply h-10 p-1 bg-white dark:bg-slate-500 box-border rounded border-2 border-blue-300 dark:border-gray-700 dark:text-gray-200 outline-none;
+    width: 100%;
+}
+
+.select2-search--dropdown .select2-search__field::-webkit-search-cancel-button {
+    @apply appearance-none;
+}
+
+.select2-search--dropdown.select2-search--hide {
+    @apply hidden;
+}
+
+.select2-close-mask {
+    @apply block w-12 min-w-full m-0 p-0;
+    border: 0;
+    position: fixed;
+    left: 0;
+    top: 0;
+    min-height: 100%;
+    height: auto;
+    width: auto;
+    opacity: 0;
+    z-index: 99;
+    background-color: #fff;
+    filter: alpha(opacity=0);
+}
+
+.select2-hidden-accessible {
+    border: 0 !important;
+    clip: rect(0 0 0 0) !important;
+    -webkit-clip-path: inset(50%) !important;
+    clip-path: inset(50%) !important;
+    height: 1px !important;
+    overflow: hidden !important;
+    padding: 0 !important;
+    position: absolute !important;
+    width: 1px !important;
+    white-space: nowrap !important;
+}
